--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
       - LOGIN_URL=http://web/backend/login.php
       - PASSWORD=123456
       - ADMIN_URL=http://web/backend/treehole_list.php
-      - DOMAIN=web
+      - HOST=web
       - REFERER_URL=http://web/backend/admin.php
