--- a/xssbot/Dockerfile
+++ b/xssbot/Dockerfile
@@ -1,3 +1,5 @@
 FROM ctftraining/base_image_xssbot
 
+ENV PASSWORD 0xynb067e5d06b06capry40bte097ypa
+
 COPY --chown=bot:bot ./app.js /home/bot/app.js
